# review-master-v2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  conftest.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: mobile-sidebar-hamburger-no-open.md
.planning/design-refs/review-master/: README.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-UAT.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
apps/accounts/: admin.py  forms.py  managers.py  models.py  permissions.py  throttling.py  urls.py  views.py
apps/common/: exceptions.py  pagination.py  throttling.py  urls.py  views.py
apps/organisations/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Requirements_Phase1_Superadmin.docx
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
templates/: auth_base.html  base.html  base_org.html
templates/accounts/: invite_accept.html  invite_error.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html
templates/components/: badges.html  buttons.html  empty_state.html  filter_bar.html  form_fields.html  pagination.html  skeletons.html  toasts.html
templates/emails/: invitation.html  invitation.txt  password_reset.html  password_reset.txt
templates/organisations/: list.html  org_dashboard.html
templates/pages/: placeholder.html  showcase.html
templates/partials/: _nav_item.html  head.html  shell.html  shell_open.html  shell_org_open.html  sidebar.html  sidebar_org.html  topbar.html
templates/registration/: login.html
(+123 files in other folders)
